@@ -0,0 +1,14 @@
 [build-system]
 requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "mixstyle-TTA"
 version = "0.0.1"
 dynamic = ["dependencies"]
 authors = {name = "Hilke Ahlers", email = "hilke.a@web.de"}
 description = "Modules to explicitly store domain-specific style information during training to enable latent augmentation during inference time"
 readme = "README.md"
 license = "MIT"
 keywords = ["domain generalization", "mixstyle", "test time augmentation", "feature statistics", "latent augmentation", "style transfer", "domain adaptation"]

 [tool.setuptools]
 packages = ["mixstyle-TTA"]
 
 [tool.setuptools.dynamic]
 dependencies = {file = ["requirements.txt"]}